# tinyml-fog

./: .gitignore  README.md  anomaly_model.h  anomaly_model.keras  anomaly_model.tflite  anomoly_data.csv  arduino_data.csv  collect.py  collect_control.py  collect_training_data.py  fog_node.py  requirements.txt  sensor_data.csv  simulate_node.py  train_edge_model.py  train_velocity_model.py  training_data.csv  velocity_model.h  velocity_model.keras
pico_ml_node/: CMakeLists.txt  main.cpp  ml_model.cpp  ml_model.h
sketchs/arduino_sensor_node/: arduino_sensor_node.ino
sketchs/ex_HC-SRO4_reading/: ex_HC-SRO4_reading.ino
